[package]
name = "rust_station_13"
authors = ["Neko The Catgirl - Lead developer", "All github contributors"]
description = "A rustified version of Space Station 13 - This is the client / server application"
readme = "Readme.md"
repository = "https://github.com/NekoTheCatgirl/rust_station_13"
keywords = ["gamedev", "graphics", "game", "crossplatform"]
publish = false
version = "0.2.0"
edition = "2021"

[features]
default = []
debug_dylib = ["bevy/dynamic_linking"]

[lints.rust]
unsafe_code = "forbid"

[[bin]]
name = "rust_station_13"
test = false
bench = false

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "abort"
strip = "debuginfo"

[dependencies]
bevy = { version = "0.15.3" }
chrono = "0.4.40"
clap = { version = "4.5.36", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
sys-info = "0.9.1"
ureq = "3.0.10"
whoami = "1.6.0"
walkdir = "2.5.0"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"

[build-dependencies]
walkdir = "2.5.0"
